Добавлены исправления